--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EtchySketchy</title>
-    <link rel="sylesheet" href="style.css">
+    <link rel="sylesheet" href="style.css" >
 </head>
 <body>
     <h1>Welcome to the Game</h1>
+
+    <form id="sizeForm">Enter a number here
+    <label id="formLabel">Area Size</label>
+    <input type="text">
+    </form> <br></br>
+
     <div id="container">dwa</div>
 
     <script src="index.js"></script>
