--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
     <div id="container">dwa</div>
 
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </body>
 </html>
