Create div generator function for width

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EtchySketchy</title>
-    <link rel="sylesheet" href="style.css" >
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to the Game</h1>
 
-    <form id="sizeForm">Enter a number here
-    <label id="formLabel">Area Size</label>
-    <input type="text">
+    <form id="sizeForm">
+        <label id="formLabel">Enter a number here</label> 
+        <br></br>
+        <input type="text" id="sizeInput">
     </form> <br></br>
 
-    <div id="container">dwa</div>
+    <div id="container">example</div>
 
     <script src="index.js" defer></script>
 </body>
