Create box for container

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 <body>
     <h1>Welcome to the Game</h1>
 
-    <form id="sizeForm">
-        <label id="formLabel">Enter a number here</label> 
-        <br></br>
-        <input type="text" id="sizeInput">
-    </form> <br></br>
+    <button id="reset">RESET</button>
 
     <div id="container">example</div>
 
